# OpenGLProject

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
Main/: CMakeLists.txt
Main/src/: graphicsLibs.h  main.cpp
Main/src/demos/: demos.cpp  demos.h  simpleRectangle.cpp  simpleTexture.cpp  simpleTriangle.cpp
Main/src/renderer/: CMakeLists.txt  defaultFragment.fs  defaultVertex.vs  graphicsLibs.cpp  managedResources.h  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.h
Main/src/resources/shaders/: textureDemo.fs  textureDemo.vs
lib/: CMakeLists.txt  versions.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/demo-project/: CMakeLists.txt  config.h.in  main.cpp
src/demo-project/demos/: demos.cpp  demos.h  simple3D.cpp  simpleRectangle.cpp  simpleTexture.cpp
src/demo-project/resources/shaders/: 3DDemo.vs  fractal.fs  testVertex.vs
src/demos/: demos.cpp  simpleRectangle.cpp  simpleTexture.cpp  simpleTriangle.cpp
src/renderer/: CMakeLists.txt  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.h
src/systems/: CMakeLists.txt
src/systems/systems/: config.h.in
src/systems/systems/renderer/: CMakeLists.txt  camera.cpp  camera.h  graphicsLibs.cpp  graphicsLibs.h  managedResources.h  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.h
